# AdvancedProgramming

./: .gitignore  AP.xmind  CMakeLists.txt  README.md  main.cpp
DoubleLinkedList/: Item.cpp  Item.h  List.cpp  List.h
Java parallel programming/: BufferArea.java  Consumer.java  ParallelQS.java  Producer.java  ProducerComsumer.java  ProducerConsumer.java
Vehicles/: Aircraft.cpp  Aircraft.h  Amphibian.cpp  Amphibian.h  Boat.cpp  Boat.h  Car.cpp  Car.h  Fliewatueuet.cpp  Fliewatueuet.h  FlyingCar.cpp  FlyingCar.h  Vehicle.cpp  Vehicle.h
rust/ap-rust/: Cargo.toml
rust/ap-rust/src/: lib.rs  sudoku.rs
